Add layout template and update index page structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block title %}
+    Routine
+{% endblock %}
+
+{% block body %}
     <h1>Project: Routine</h1>
-    <a href="">Set Task Queue</a>
+    <a href="">Set Study Template</a>
     <a href="">(i)</a>
     <a href="">Statistics</a>
     <h2>12:34</h2>
@@ -16,6 +15,4 @@
     <p>Current Task: </p>
     <a href="">Quick Work</a>
     <a href="">Start Working</a>
-    
-</body>
-</html>
+{% endblock %}
