--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,34 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Routine
+Routine
 {% endblock %}
 
 {% block body %}
-    <h1>Project: Routine</h1>
-    <a href="">Set Study Template</a>
-    <a href="">(i)</a>
+
+<div id="top">
+    <a href="">Edit</a>
+    <a href="">Project: Routine</a>
     <a href="">Statistics</a>
+</div>
+<div id="center">
     <h2>12:34</h2>
     <h3>Thu, Aug 7</h3>
     <p>Hours workded today: </p>
-    <p>Current Task: </p>
-    <a href="">Quick Work</a>
-    <a href="">Start Working</a>
+    
+    <form action="/" method="post">
+        <select>
+            <option disabled selected>Task</option>
+            <option>Fullstackopen</option>
+            <option>CS50</option>
+        </select>
+        <br>
+        <input type="number" name="hour">
+        :
+        <input type="number" name="minute">
+        <br>
+        <button>Start</button>
+    </form>
+</div>
+
 {% endblock %}
