--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/static/styles.css" rel="stylesheet">
     <title>Project: {% block title %}{% endblock %}</title>
 </head>
 
