Add edit page and update index layout for navigation

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@ Routine
 
 {% block body %}
 
-<div id="top">
-    <a href="">Edit</a>
+<div class="top">
+    <a href="/edit">Edit</a>
     <a href="">Project: Routine</a>
     <a href="">Statistics</a>
 </div>
-<div id="center">
+<div class="middle">
     <h2>12:34</h2>
     <h3>Thu, Aug 7</h3>
     <p>Hours workded today: </p>
