Add response caching control and update form action in index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@ Routine
     <h3>Thu, Aug 7</h3>
     <p>Hours workded today: </p>
     
-    <form action="/" method="post">
+    <form action="/study" method="post">
         <select>
             <option disabled selected>Task</option>
             <option>Fullstackopen</option>
