Refactor index route to handle POST requests and update study page form structure

--- a/templates/study.html
+++ b/templates/study.html
@@ -12,7 +12,9 @@ Study
     <h1>43:23</h1>
 </div>
 <div class="bottom">
-    <button>End now</button>
+    <form action="/" method="post">
+        <button type="sumbit">End now</button>
+    </form>
 </div>
 
 {% endblock %}
