--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,11 @@ Routine
         </select>
         <br>
 
-        Work Time: <input id="work-time" name="work-time" type="number" min="1" max="60">
+        Work Time: <input id="work-time" name="work-time" type="number" min="1" max="60"> minutes
         <br>
         Repetition: <input id="repetition" name="repetition" type="number" min="1">
         <br>
-        Rest Time: <input id="rest-time" name="rest-time" type="number" min="1" max="30">
+        Rest Time: <input id="rest-time" name="rest-time" type="number" min="1" max="30"> minutes
 
         <br>
         <button>Start</button>
