Change edit page to tasks page

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@ Routine
 {% block body %}
 
 <div class="top">
-    <a href="/edit">Edit</a>
+    <a href="/tasks">Tasks</a>
     <a href="">Project: Routine</a>
     <a href="/statistics">Statistics</a>
 </div>
