--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    {% if get_flashed_messages() %}
+    <header>
+        <div role="alert">
+            {{ get_flashed_messages() | join(" ") }}
+        </div>
+    </header>
+    {% endif %}
+
     {% block body %}{% endblock %}
 </body>
 
