Add study functionality with form handling and task display

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@ Routine
         <h2 id="clock-top"></h2>
         <h3 id="clock-bottom"></h3>
     </div>
-    <form action="/study" method="post">
+    <form action="/study" method="get">
         <select name="task" id="task-select">
             <option disabled selected value="">Task</option>
             {% for task in tasks %}
