--- a/templates/study.html
+++ b/templates/study.html
@@ -5,11 +5,11 @@ Study
 {% endblock %}
 
 {% block body %}
+
 <div class="middle">
-    <p>12:34</p>
-    <p>Thu, Aug 7</p>
-    <h2>CS50</h2>
+    <h2>{{ task.name }}</h2>
     <h1>43:23</h1>
+    <h2>1 / {{ task.repetition }}</h2
 </div>
 <div class="bottom">
     <form action="/" method="post">
