--- a/templates/index.html
+++ b/templates/index.html
@@ -33,12 +33,17 @@ Routine
         </select>
         <br>
 
-        Work Time: <input id="work-time" name="work-time" type="number" min="1" max="60"> minutes
+        Work Time:
         <br>
-        Repetition: <input id="repetition" name="repetition" type="number" min="1">
+        <input id="work-time" name="work-time" type="number" min="1" max="60" style="width: 205px;"> minutes
         <br>
-        Rest Time: <input id="rest-time" name="rest-time" type="number" min="1" max="30"> minutes
-
+        Repetition:
+        <br>
+        <input id="repetition" name="repetition" type="number" min="1" style="width: 205px;">
+        <br>
+        Rest Time:
+        <br>
+        <input id="rest-time" name="rest-time" type="number" min="1" max="30" style="width: 205px;"> minutes
         <br>
         <button>Start</button>
     </form>
