--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@ Routine
         document.getElementById('rest-time').value = selected.dataset.restTime || '';
       });
     }
-
+    updateDateTime()
     setInterval(updateDateTime, 1000);
     updateFormInput();
 
