--- a/templates/add.html
+++ b/templates/add.html
@@ -10,16 +10,17 @@ Add
     <a href="/tasks">Back</a>
 </div>
 <div class="middle">
+    <h2>New Task</h2>
     <form action="/add" method="post">
         Name: <input name="name" type="text">
         <br>
-        Work time: <input name="work-time" type="number" value="50"> minutes
+        Work time: <input name="work-time" type="number" value="50" style="width: 205px;"> minutes
         <br>
-        Rest time: <input name="rest-time" type="number" value="10"> minutes
+        Rest time: <input name="rest-time" type="number" value="10" style="width: 205px;"> minutes
         <br>
-        Repetition: <input name="repetition" type="number" value="1">
+        Repetition: <input name="repetition" type="number" value="1" style="width: 205px;">
         <br>
-        <button type="submit">Add new task</button>
+        <button type="submit">Add</button>
     </form>
 </div>
 
