--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
     <title>Project: {% block title %}{% endblock %}</title>
 </head>
 
 <body>
-    {% if get_flashed_messages() %}
-    <header>
-        <div role="alert">
-            {{ get_flashed_messages() | join(" ") }}
-        </div>
-    </header>
-    {% endif %}
-
     {% block body %}{% endblock %}
+    {% if get_flashed_messages() %}
+        <div role="alert" class="alert">
+            <h3>{{ get_flashed_messages() | join(" ") }}<h3>
+        </div>
+    {% endif %}
 </body>
 
 </html>
