Refactor terminology from "Task" to "Subject" across templates for consistency

--- a/templates/add.html
+++ b/templates/add.html
@@ -10,7 +10,7 @@ Add
     <a href="/tasks">Back</a>
 </div>
 <div class="middle">
-    <h2>New Task</h2>
+    <h2>New Subject</h2>
     <form action="/add" method="post">
         Name: <input name="name" type="text">
         <br>
