--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,7 +9,7 @@ Edit
     <a href="/tasks">Back</a>
 </div>
 <div class="middle">
-    <h2>Task</h2>
+    <h2>Subject</h2>
     <form action="/edit" method="post">
         <input name="id" type="hidden" value="{{ task.id }}">
         Name: <input name="name" type="text" value="{{ task.name }}">
