--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Statistic
+Report
 {% endblock %}
 
 {% block body %}
@@ -19,7 +19,7 @@ Statistic
         <table>
             <thead>
                 <tr>
-                    <th>Task</th>
+                    <th>Subject</th>
                     <th>Total time</th>
                 </tr>
             </thead>
@@ -38,7 +38,7 @@ Statistic
         <table>
             <thead>
                 <tr>
-                    <th>Task</th>
+                    <th>Subject</th>
                     <th>Work</th>
                     <th>Date</th>
                 </tr>
